Fixed spacing differences between register and login pages

--- a/src/shared/components/BigInput/BigInput.css
+++ b/src/shared/components/BigInput/BigInput.css
@@ -1,5 +1,4 @@
 .bigInput {
-  margin-bottom:2em;
   text-align:left;
 }
 
